--- a/src/components/Modules/Home/RecentWorkModule/custom.css
+++ b/src/components/Modules/Home/RecentWorkModule/custom.css
@@ -26,7 +26,7 @@
 }
 
 .more {
-  transition: all 1s ease-in;
+  transition: all 0.5s ease-in;
 }
 
 .more-projects:hover .more {
@@ -39,7 +39,7 @@
 
 .more-arrow-link {
   position: relative;
-  transition: all 1s ease-in;
+  transition: all 0.5s ease-in;
 }
 
 .project-container {
@@ -49,6 +49,14 @@
 
 .project-container:hover {
   border-bottom: 1px solid var(--primary);
+}
+
+.project-title-text {
+  transition: all 0.5s ease-in;
+}
+
+.project-container:hover .project-title-text {
+  color: var(--primary);
 }
 
 .arrow-container {
@@ -82,7 +90,10 @@
   }
 
   .more-projects {
-    width: 250px;
     margin-top: 20px;
+  }
+
+  .arrow-container {
+    display: none;
   }
 }
