--- a/src/components/Modules/AboutIntroModule/custom.css
+++ b/src/components/Modules/AboutIntroModule/custom.css
@@ -8,19 +8,30 @@
 }
 
 .rotating-border {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 30px solid var(--primary);
-  border-bottom: none;
-  border-bottom-left-radius: 10%;
-  border-bottom-right-radius: 10%;
-  animation: rotate 5s linear infinite;
-  overflow: hidden;
+  max-width: 40%;
+  position: relative;
+  display: inline-block;
 }
 
-@keyframes rotate {
+.rotating-border::before {
+  content: "";
+  left: 28%;
+  width: 130px;
+  height: 130px;
+  position: absolute;
+  border-radius: 50%;
+  border: 33px solid;
+  border-top-color: currentcolor;
+  border-right-color: currentcolor;
+  border-bottom-color: currentcolor;
+  border-left-color: currentcolor;
+  top: calc(50% - 50px);
+  -webkit-animation: rotated_circle linear 10s infinite;
+  animation: rotated_circle linear 10s infinite;
+  border-color: var(--primary) var(--primary) transparent transparent;
+}
+
+@keyframes rotated_circle {
   from {
     transform: rotate(0deg);
   }
@@ -31,13 +42,30 @@
 
 @media only screen and (max-width: 768px) {
   .about-intro-text {
-    font-size: 2rem;
+    font-size: 2.8rem;
   }
 
-  .rotating-border {
-    width: 40px;
-    height: 40px;
-    border: 10px solid var(--primary);
-    border-bottom: none;
+  .rotating-border::before {
+    width: 100px;
+    height: 100px;
+    left: -40px;
+    top: calc(50% - 30px);
+    border: 20px solid;
+    border-color: var(--primary) var(--primary) transparent transparent;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .about-intro-text {
+    font-size: 2rem;
+  }
+  
+  .rotating-border::before {
+    width: 80px;
+    height: 80px;
+    left: -40px;
+    top: calc(50% - 30px);
+    border: 20px solid;
+    border-color: var(--primary) var(--primary) transparent transparent;
   }
 }
