--- a/src/components/Modules/Home/HomeServiceModule/custom.css
+++ b/src/components/Modules/Home/HomeServiceModule/custom.css
@@ -2,7 +2,7 @@
   --primary: rgb(85, 230, 165);
 }
 
-.service {
+/* .service {
   background: linear-gradient(to right, #0f2a1e, black, black);
   animation: pulse 6s infinite;
 }
@@ -15,7 +15,7 @@
   50% {
     background: linear-gradient(to right, #0f2a1e, black, black);
   }
-}
+} */
 
 .service-info-text {
   color: var(--primary) !important;
@@ -24,14 +24,14 @@
 
 .service-card {
   background-color: rgb(10, 16, 25);
-  width: 25%;
+  /* width: 25%; */
   transition: all 0.5s ease-in;
 }
 
 .service-card:hover {
-  box-shadow: 0px 0px 45px 2px rgba(85, 230, 165, 0.75);
-  -webkit-box-shadow: 0px 0px 45px 2px rgba(85, 230, 165, 0.75);
-  -moz-box-shadow: 0px 0px 45px 2px rgba(85, 230, 165, 0.75);
+  box-shadow: 0px 0px 15px 1px rgba(85, 230, 165, 0.75);
+  -webkit-box-shadow: 0px 0px 15px 1px rgba(85, 230, 165, 0.75);
+  -moz-box-shadow: 0px 0px 15px 1px rgba(85, 230, 165, 0.75);
 }
 
 .wrapper {
@@ -75,7 +75,7 @@
   font-size: 10rem;
 }
 
-@media only screen and (max-width: 678px) {
+@media only screen and (max-width: 768px) {
   .service-title-text {
     font-size: 2rem !important;
   }
