--- a/src/components/Modules/Home/BlogModule/custom.css
+++ b/src/components/Modules/Home/BlogModule/custom.css
@@ -15,16 +15,22 @@
 }
 
 .blog-read-more {
-  color: var(--primary);
-  font-size: 1rem;
+  color: var(--primary) !important;
+  font-size: 1rem !important;
 }
 
 .blog-arrow-icon {
   color: var(--primary);
+  transition: all 0.5s ease-in;
+}
+
+.read-more-link:hover .blog-arrow-icon {
+  transform: translateX(10px);
 }
 
 .blog-item-title-text {
   font-size: 1.4rem !important;
+  transition: all 0.5s ease-in;
 }
 
 .blog-item-title-text:hover {
