--- a/src/components/Modules/Home/HomeIntroModule/custom.css
+++ b/src/components/Modules/Home/HomeIntroModule/custom.css
@@ -20,24 +20,13 @@
   -webkit-text-stroke-color: white;
 }
 
-.transformLink {
-  transform: rotate(180deg);
-  font-size: 16px;
-  transition: all 0.5s ease-in;
-}
-
-.transformLink:hover {
-  color: var(--primary);
-  text-decoration: underline;
-}
-
-.transformIcon {
+.transform {
   transform: rotate(270deg);
   font-size: 16px;
   transition: all 0.5s ease-in;
 }
 
-.transformIcon:hover {
+.transform:hover {
   color: var(--primary);
   text-decoration: underline;
 }
